syntax = "proto3";

package model;

option go_package = "github.com/yachnytskyi/golang-mongo-grpc/internal/user/delivery/grpc/v1/model";

import "user.proto";

message UserCreate {
    string name = 1;
    string email = 2;
    string password = 3;
    string passwordConfirm = 4;
}

message UserCreatedView { User user = 1; }
